@@ -38,6 +38,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Mailman now sets the 'secure' flag in cookies set via https URLs.
+      Bug #770377.
+
     - Added a logout link to the admindb interface and made both admin and
       admindb logout effective for a site admin cookie if allowed.
       Bug #769318.
